Update result for Shekhar Equal opportunity

--- a/Ruoyu/Updated_main.ipynb
+++ b/Ruoyu/Updated_main.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "QswOuDCVQXdj"
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "rhWMcFl8KVaL"
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "a9k2XM_oASet"
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "id": "F71Jms4DM7Lo"
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -426,7 +426,7 @@
        "[5 rows x 104 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -513,7 +513,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,13 +533,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {
     "id": "sflY4b-lna7m"
    },
    "outputs": [],
    "source": [
-    "def loss_func(y_pred, y_true):\n",
+    "def loss_01_func(y_pred, y_true):\n",
     "    #print(y_true)\n",
     "    #print(y_pred)\n",
     "    return np.sum(y_pred != y_true)/len(y_pred)\n",
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "id": "EE9jfu7aOeov"
    },
@@ -827,9 +827,9 @@
     "                if t % 500 == 0: \n",
     "                    test_pred = self.c_classifier.predict(full_test_X)\n",
     "                    test_metric = Fairness_metric(full_test_X[self.protected_label], true_label=full_test_y, predict_label=test_pred)\n",
-    "                    metric.process()\n",
-    "                    all_violation = metric.calculate_all()\n",
-    "                    full_test_result[t] = [t, loss_func(test_pred, full_test_y), \n",
+    "                    test_metric.process()\n",
+    "                    all_violation = test_metric.calculate_all()\n",
+    "                    full_test_result[t] = [t, loss_01_func(test_pred, full_test_y), \n",
     "                        abs(all_violation['Demographic_Parity'][2][0]), abs(all_violation['Equal_Opportunity'][2][0]),\n",
     "                        abs(all_violation['Equal_Odds'][2][0]), abs(all_violation['Overall_accuracy'][2][0])] \n",
     "\n",
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "id": "B9hlQTLU5Q_C"
    },
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -885,7 +885,7 @@
        "\"\\nvio_list = []\\nfor dict_i in metric_result_list:\\n  vio_list.append(abs(dict_i['Equal_Opportunity'][2]))\\nplt.plot(vio_list)\\n\""
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "yKvjl7Aa87Mi"
    },
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "XDRdZD3lYLt8"
    },
@@ -1019,7 +1019,7 @@
     "    def train(\n",
     "      self,\n",
     "      sampling_algorithm,\n",
-    "      loss_func = loss_func,\n",
+    "      loss_func = loss_01_func,\n",
     "      chosen_metric:str = 'Overall_accuracy',\n",
     "      quiet_mode:bool = True,\n",
     "      stop_iter_num:int = 1000,\n",
@@ -1144,9 +1144,9 @@
     "            if iteration % 500 == 0: \n",
     "                test_pred = c_classifier.predict(full_test_X)\n",
     "                test_metric = Fairness_metric(full_test_X[self.protected_label], true_label=full_test_y, predict_label=test_pred)\n",
-    "                metric.process()\n",
-    "                all_violation = metric.calculate_all()\n",
-    "                full_test_result[iteration] = [iteration, loss_func(test_pred, full_test_y), \n",
+    "                test_metric.process()\n",
+    "                all_violation = test_metric.calculate_all()\n",
+    "                full_test_result[iteration] = [iteration, loss_01_func(test_pred, full_test_y), \n",
     "                        abs(all_violation['Demographic_Parity'][2][0]), abs(all_violation['Equal_Opportunity'][2][0]),\n",
     "                   abs(all_violation['Equal_Odds'][2][0]), abs(all_violation['Overall_accuracy'][2][0])] \n",
     "\n",
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1210,7 +1210,18 @@
     "id": "_vxahce5WMA9",
     "outputId": "358fed78-6451-4183-ba25-df93eed8372b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nclassifier = LogisticRegression( max_iter = 500)\\nsampling_algorithm = Abernethy_p_sampling(0.5)\\nmodel = Training_General(classifier, 48, train_dataset, test_dataset, 'group')\\nlen(train_dataset)\\nbest_classifier, last_classifier, scores_list, metric_result_list, full_test_result = model.train(sampling_algorithm, quiet_mode = False, chosen_metric='Demographic_Parity', stop_iter_num = 1000)\\n\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "classifier = LogisticRegression( max_iter = 500)\n",
@@ -1223,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "id": "dHgFatKtobgi"
    },
@@ -1234,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1242,7 +1253,18 @@
     "id": "KEHTk8w67tmV",
     "outputId": "f6adb657-13e6-476a-a7a8-ea1742de23cf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nvio_list = []\\nfor dict_i in metric_result_list:\\n  vio_list.append(abs(dict_i['Equal_Opportunity'][2]))\\nplt.plot(vio_list)\\n\""
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "vio_list = []\n",
@@ -1263,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {
     "id": "wEA3guet8lK3"
    },
@@ -1338,7 +1360,18 @@
    "metadata": {
     "id": "X18cAEbtfN1i"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tmp_result/Abernethy_t_vs_fair.csv\n",
+      "p:0.4\n",
+      "p:0.4, i=0\n",
+      "p:0.4, i=1\n"
+     ]
+    }
+   ],
    "source": [
     "print(RESULT_SAVE_PATH + '/Abernethy_t_vs_fair.csv')\n",
     "p_list = np.linspace(0.4, 1, 13)\n",
@@ -1351,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {
     "id": "alAv4M5QwQgT"
    },
@@ -1387,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {
     "id": "jrHRVg_iwQtg"
    },
@@ -1566,6 +1599,8 @@
     "# Template model\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "import sklearn\n",
+    "import pandas as pd\n",
+    "from pandas.core.frame import DataFrame\n",
     "\n",
     "'''\n",
     "global init_train_size \n",
@@ -1625,7 +1660,7 @@
     "        self.trainset = pd.concat([smp1, smp2], ignore_index=True)\n",
     "        \n",
     "        \n",
-    "        #display(self.trainset)\n",
+    "        display(self.trainset)\n",
     "        #display(self.origin_train_dataset)\n",
     "\n",
     "    # Sampling algorithm needs to be a class like Abernethy_p_sampling \n",
@@ -1642,24 +1677,16 @@
     "\n",
     "        self.scores_list = []\n",
     "        self.metric_result_list = []\n",
-    "\n",
-    "\n",
     "        \n",
     "        # construct the X_train, y_train, X_test, y_test\n",
     "        train_data = self.trainset.copy()\n",
     "        y_train = train_data['label']\n",
     "        X_train = train_data.drop('label', axis=1)\n",
     "        \n",
-    "\n",
-    "\n",
     "        full_test_y = self.origin_test_dataset['label']\n",
     "        full_test_X = self.origin_test_dataset.drop('label', axis=1)\n",
     "\n",
-    "        ###\n",
-    "        #\n",
-    "        ###\n",
-    "        #X_train, X_test, y_train, y_test = sklearn.model_selection.train_test_split(X,y)\n",
-    "\n",
+    "        \n",
     "        # fit the initial model and output the prediction\n",
     "        c_classifier = sklearn.base.clone(self.empty_classifier)\n",
     "        c_classifier.fit(X_train, y_train)\n",
@@ -1668,16 +1695,16 @@
     "        \n",
     "        test_pred = c_classifier.predict(full_test_X)\n",
     "        test_metric = Fairness_metric(full_test_X[self.protected_label], true_label=full_test_y, predict_label=test_pred)\n",
-    "        metric.process()\n",
-    "        all_violation = metric.calculate_all()\n",
-    "        full_test_result = [loss_func(test_pred, full_test_y), \n",
+    "        test_metric.process()\n",
+    "        all_violation = test_metric.calculate_all()\n",
+    "        full_test_result = [loss_01_func(test_pred, full_test_y), \n",
     "                abs(all_violation['Demographic_Parity'][2][0]), abs(all_violation['Equal_Opportunity'][2][0]),\n",
     "                abs(all_violation['Equal_Odds'][2][0]), abs(all_violation['Overall_accuracy'][2][0])] \n",
     "\n",
     "        \n",
     "\n",
     "        # How to define the best classifier?\n",
-    "        return self.scores_list, self.metric_result_list, full_test_result\n",
+    "        return self.scores_list, all_violation, full_test_result\n",
     "  \n",
     "    def predict(\n",
     "      self,\n",
@@ -1711,8 +1738,9 @@
     "            print(f'i={i}')\n",
     "            model = Random_Sampling(classifier=classifier, each_group_num=each_group_num, \n",
     "                origin_train_dataset=train_dataset, origin_test_dataset = test_dataset, protected_label='group')\n",
-    "            scores_list, metric_result_list, full_test_result = model.train(\n",
+    "            scores_list, all_violation, full_test_result = model.train(\n",
     "                    quiet_mode = True)\n",
+    "            print(all_violation)\n",
     "            res.append(full_test_result)\n",
     "            #tmp_dict = metric_result_list[-1]\n",
     "            #res.append([p, abs(tmp_dict['Demographic_Parity'][2]), abs(tmp_dict['Equal_Opportunity'][2]),\n",
@@ -1721,6 +1749,18 @@
     "            tmp_tmp.to_csv(RESULT_SAVE_PATH + f'/Random_Sampling_t_vs_fair_tmp_tmp_.csv')\n",
     "    res = pd.DataFrame(res, columns=['train_error', 'demographic parity', 'equal_opportunity', 'equal odds', 'overall accuracy'])\n",
     "    return res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(RESULT_SAVE_PATH + '/Random_Sampling.csv')\n",
+    "classifier = LogisticRegression()\n",
+    "df = Random_Sampling_generate_t_vs_fair(classifier,  10, 500)\n",
+    "df.to_csv(RESULT_SAVE_PATH + '/Random_Sampling_500.csv')\n"
    ]
   },
   {
@@ -1790,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "id": "Xlte9p0KScjZ"
    },
@@ -1802,7 +1842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "id": "pmNlFx3OTsrB"
    },
@@ -1988,7 +2028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
