--- a/t-test_Abernethy.ipynb
+++ b/t-test_Abernethy.ipynb
@@ -10,29 +10,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "244d8b59",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import scipy.stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "2b9f104a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Zhong = pd.read_csv(\"fairness_violation_Abernethy.csv\")\n",
+    "Zhong = pd.read_csv(\"eqaul_oppo_Abernethy.csv\")\n",
     "Ruoyu = pd.read_csv(\"Ruoyu/Abernethy_t_vs_fair.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "12af50a6",
    "metadata": {},
    "outputs": [],
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "6831a727",
    "metadata": {},
    "outputs": [],
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "2a91dbd6",
    "metadata": {},
    "outputs": [],
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "id": "012cd95d",
    "metadata": {},
    "outputs": [],
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "ecd87d32",
    "metadata": {},
    "outputs": [],
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "0b5e16cf",
    "metadata": {},
    "outputs": [
@@ -100,7 +101,7 @@
        "0.008333333333333333"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "5a748f3d",
    "metadata": {},
    "outputs": [],
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "f5ac8ea3",
    "metadata": {},
    "outputs": [],
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "2cd287a4",
    "metadata": {},
    "outputs": [],
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "361bcd79",
    "metadata": {},
    "outputs": [],
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "827c6980",
    "metadata": {},
    "outputs": [],
@@ -171,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "id": "6e8a3ded",
    "metadata": {},
    "outputs": [],
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "id": "3c58510f",
    "metadata": {},
    "outputs": [
@@ -191,13 +192,34 @@
        "2.151704093935444"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "26e9762d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.022622141035870014"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - scipy.stats.t.cdf(t, 18)"
    ]
   },
   {
@@ -210,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "id": "399e921c",
    "metadata": {},
    "outputs": [],
@@ -221,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "id": "6dee031b",
    "metadata": {},
    "outputs": [],
@@ -232,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "id": "f657d4b7",
    "metadata": {},
    "outputs": [],
@@ -243,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "id": "9ee7445c",
    "metadata": {},
    "outputs": [],
@@ -253,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "id": "1dcb663d",
    "metadata": {},
    "outputs": [],
@@ -263,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "5bd2e20a",
    "metadata": {},
    "outputs": [
@@ -273,13 +295,34 @@
        "0.7230077957314001"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "67d00c59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.23948269163813463"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - scipy.stats.t.cdf(t, 18)"
    ]
   },
   {
@@ -292,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "id": "f0119aaf",
    "metadata": {},
    "outputs": [],
@@ -303,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "id": "d264a27f",
    "metadata": {},
    "outputs": [],
@@ -314,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "id": "e599f58a",
    "metadata": {},
    "outputs": [],
@@ -325,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "id": "5bc11134",
    "metadata": {},
    "outputs": [],
@@ -335,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "id": "8c72f939",
    "metadata": {},
    "outputs": [],
@@ -345,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "id": "d35f83a0",
    "metadata": {},
    "outputs": [
@@ -355,7 +398,7 @@
        "1.5620483037994821"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,6 +406,35 @@
    "source": [
     "t"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "78c54fb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06784319807854577"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - scipy.stats.t.cdf(t, 18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84107e2c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
