Update Abernethy Overall Accuracy

--- a/Ruoyu/Updated_main.ipynb
+++ b/Ruoyu/Updated_main.ipynb
@@ -1356,9 +1356,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "id": "X18cAEbtfN1i"
+    "id": "X18cAEbtfN1i",
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1368,7 +1369,147 @@
       "tmp_result/Abernethy_t_vs_fair.csv\n",
       "p:0.4\n",
       "p:0.4, i=0\n",
-      "p:0.4, i=1\n"
+      "p:0.4, i=1\n",
+      "p:0.4, i=2\n",
+      "p:0.4, i=3\n",
+      "p:0.4, i=4\n",
+      "p:0.4, i=5\n",
+      "p:0.4, i=6\n",
+      "p:0.4, i=7\n",
+      "p:0.4, i=8\n",
+      "p:0.4, i=9\n",
+      "p:0.45\n",
+      "p:0.45, i=0\n",
+      "p:0.45, i=1\n",
+      "p:0.45, i=2\n",
+      "p:0.45, i=3\n",
+      "p:0.45, i=4\n",
+      "p:0.45, i=5\n",
+      "p:0.45, i=6\n",
+      "p:0.45, i=7\n",
+      "p:0.45, i=8\n",
+      "p:0.45, i=9\n",
+      "p:0.5\n",
+      "p:0.5, i=0\n",
+      "p:0.5, i=1\n",
+      "p:0.5, i=2\n",
+      "p:0.5, i=3\n",
+      "p:0.5, i=4\n",
+      "p:0.5, i=5\n",
+      "p:0.5, i=6\n",
+      "p:0.5, i=7\n",
+      "p:0.5, i=8\n",
+      "p:0.5, i=9\n",
+      "p:0.55\n",
+      "p:0.55, i=0\n",
+      "p:0.55, i=1\n",
+      "p:0.55, i=2\n",
+      "p:0.55, i=3\n",
+      "p:0.55, i=4\n",
+      "p:0.55, i=5\n",
+      "p:0.55, i=6\n",
+      "p:0.55, i=7\n",
+      "p:0.55, i=8\n",
+      "p:0.55, i=9\n",
+      "p:0.6\n",
+      "p:0.6, i=0\n",
+      "p:0.6, i=1\n",
+      "p:0.6, i=2\n",
+      "p:0.6, i=3\n",
+      "p:0.6, i=4\n",
+      "p:0.6, i=5\n",
+      "p:0.6, i=6\n",
+      "p:0.6, i=7\n",
+      "p:0.6, i=8\n",
+      "p:0.6, i=9\n",
+      "p:0.65\n",
+      "p:0.65, i=0\n",
+      "p:0.65, i=1\n",
+      "p:0.65, i=2\n",
+      "p:0.65, i=3\n",
+      "p:0.65, i=4\n",
+      "p:0.65, i=5\n",
+      "p:0.65, i=6\n",
+      "p:0.65, i=7\n",
+      "p:0.65, i=8\n",
+      "p:0.65, i=9\n",
+      "p:0.7\n",
+      "p:0.7, i=0\n",
+      "p:0.7, i=1\n",
+      "p:0.7, i=2\n",
+      "p:0.7, i=3\n",
+      "p:0.7, i=4\n",
+      "p:0.7, i=5\n",
+      "p:0.7, i=6\n",
+      "p:0.7, i=7\n",
+      "p:0.7, i=8\n",
+      "p:0.7, i=9\n",
+      "p:0.75\n",
+      "p:0.75, i=0\n",
+      "p:0.75, i=1\n",
+      "p:0.75, i=2\n",
+      "p:0.75, i=3\n",
+      "p:0.75, i=4\n",
+      "p:0.75, i=5\n",
+      "p:0.75, i=6\n",
+      "p:0.75, i=7\n",
+      "p:0.75, i=8\n",
+      "p:0.75, i=9\n",
+      "p:0.8\n",
+      "p:0.8, i=0\n",
+      "p:0.8, i=1\n",
+      "p:0.8, i=2\n",
+      "p:0.8, i=3\n",
+      "p:0.8, i=4\n",
+      "p:0.8, i=5\n",
+      "p:0.8, i=6\n",
+      "p:0.8, i=7\n",
+      "p:0.8, i=8\n",
+      "p:0.8, i=9\n",
+      "p:0.85\n",
+      "p:0.85, i=0\n",
+      "p:0.85, i=1\n",
+      "p:0.85, i=2\n",
+      "p:0.85, i=3\n",
+      "p:0.85, i=4\n",
+      "p:0.85, i=5\n",
+      "p:0.85, i=6\n",
+      "p:0.85, i=7\n",
+      "p:0.85, i=8\n",
+      "p:0.85, i=9\n",
+      "p:0.8999999999999999\n",
+      "p:0.8999999999999999, i=0\n",
+      "p:0.8999999999999999, i=1\n",
+      "p:0.8999999999999999, i=2\n",
+      "p:0.8999999999999999, i=3\n",
+      "p:0.8999999999999999, i=4\n",
+      "p:0.8999999999999999, i=5\n",
+      "p:0.8999999999999999, i=6\n",
+      "p:0.8999999999999999, i=7\n",
+      "p:0.8999999999999999, i=8\n",
+      "p:0.8999999999999999, i=9\n",
+      "p:0.95\n",
+      "p:0.95, i=0\n",
+      "p:0.95, i=1\n",
+      "p:0.95, i=2\n",
+      "p:0.95, i=3\n",
+      "p:0.95, i=4\n",
+      "p:0.95, i=5\n",
+      "p:0.95, i=6\n",
+      "p:0.95, i=7\n",
+      "p:0.95, i=8\n",
+      "p:0.95, i=9\n",
+      "p:1.0\n",
+      "p:1.0, i=0\n",
+      "p:1.0, i=1\n",
+      "p:1.0, i=2\n",
+      "p:1.0, i=3\n",
+      "p:1.0, i=4\n",
+      "p:1.0, i=5\n",
+      "p:1.0, i=6\n",
+      "p:1.0, i=7\n",
+      "p:1.0, i=8\n",
+      "p:1.0, i=9\n"
      ]
     }
    ],
