--- a/run.ipynb
+++ b/run.ipynb
@@ -3601,7 +3601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "5d973276",
    "metadata": {},
    "outputs": [
@@ -3634,7 +3634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "4867d47d",
    "metadata": {},
    "outputs": [
@@ -3669,83 +3669,83 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.217862</td>\n",
-       "      <td>0.218250</td>\n",
-       "      <td>0.156685</td>\n",
-       "      <td>0.034698</td>\n",
-       "      <td>0.087110</td>\n",
+       "      <td>0.171647</td>\n",
+       "      <td>0.158558</td>\n",
+       "      <td>0.140617</td>\n",
+       "      <td>0.069281</td>\n",
+       "      <td>0.123043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.216268</td>\n",
-       "      <td>0.193701</td>\n",
-       "      <td>0.086465</td>\n",
-       "      <td>0.021595</td>\n",
-       "      <td>0.095318</td>\n",
+       "      <td>0.167463</td>\n",
+       "      <td>0.187707</td>\n",
+       "      <td>0.273794</td>\n",
+       "      <td>0.188795</td>\n",
+       "      <td>0.118344</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.217596</td>\n",
-       "      <td>0.231611</td>\n",
-       "      <td>0.175038</td>\n",
-       "      <td>0.038857</td>\n",
-       "      <td>0.095779</td>\n",
+       "      <td>0.166335</td>\n",
+       "      <td>0.198480</td>\n",
+       "      <td>0.267168</td>\n",
+       "      <td>0.171820</td>\n",
+       "      <td>0.120596</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.218592</td>\n",
-       "      <td>0.197910</td>\n",
-       "      <td>0.094185</td>\n",
-       "      <td>0.012572</td>\n",
-       "      <td>0.083361</td>\n",
+       "      <td>0.169522</td>\n",
+       "      <td>0.183631</td>\n",
+       "      <td>0.230045</td>\n",
+       "      <td>0.142003</td>\n",
+       "      <td>0.125629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.223307</td>\n",
-       "      <td>0.245760</td>\n",
-       "      <td>0.213459</td>\n",
-       "      <td>0.061674</td>\n",
-       "      <td>0.104254</td>\n",
+       "      <td>0.180146</td>\n",
+       "      <td>0.128164</td>\n",
+       "      <td>0.125554</td>\n",
+       "      <td>0.073187</td>\n",
+       "      <td>0.131126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.211554</td>\n",
-       "      <td>0.189716</td>\n",
-       "      <td>0.071570</td>\n",
-       "      <td>0.029253</td>\n",
-       "      <td>0.088321</td>\n",
+       "      <td>0.172112</td>\n",
+       "      <td>0.164090</td>\n",
+       "      <td>0.183914</td>\n",
+       "      <td>0.110755</td>\n",
+       "      <td>0.121920</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.219920</td>\n",
-       "      <td>0.247588</td>\n",
-       "      <td>0.207434</td>\n",
-       "      <td>0.051606</td>\n",
-       "      <td>0.111614</td>\n",
+       "      <td>0.166799</td>\n",
+       "      <td>0.171342</td>\n",
+       "      <td>0.196176</td>\n",
+       "      <td>0.120232</td>\n",
+       "      <td>0.119776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.211620</td>\n",
-       "      <td>0.203698</td>\n",
-       "      <td>0.117337</td>\n",
-       "      <td>0.005517</td>\n",
-       "      <td>0.092045</td>\n",
+       "      <td>0.166733</td>\n",
+       "      <td>0.198420</td>\n",
+       "      <td>0.248525</td>\n",
+       "      <td>0.152231</td>\n",
+       "      <td>0.119979</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.227224</td>\n",
-       "      <td>0.208508</td>\n",
-       "      <td>0.109607</td>\n",
-       "      <td>0.009322</td>\n",
-       "      <td>0.085599</td>\n",
+       "      <td>0.171182</td>\n",
+       "      <td>0.205802</td>\n",
+       "      <td>0.297534</td>\n",
+       "      <td>0.193000</td>\n",
+       "      <td>0.127488</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.217397</td>\n",
-       "      <td>0.184057</td>\n",
-       "      <td>0.061241</td>\n",
-       "      <td>0.036457</td>\n",
-       "      <td>0.086420</td>\n",
+       "      <td>0.173307</td>\n",
+       "      <td>0.176848</td>\n",
+       "      <td>0.208091</td>\n",
+       "      <td>0.122959</td>\n",
+       "      <td>0.126413</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3753,31 +3753,31 @@
       ],
       "text/plain": [
        "   test error  demographic parity  equal odds  equal_opportunity  \\\n",
-       "0    0.217862            0.218250    0.156685           0.034698   \n",
-       "0    0.216268            0.193701    0.086465           0.021595   \n",
-       "0    0.217596            0.231611    0.175038           0.038857   \n",
-       "0    0.218592            0.197910    0.094185           0.012572   \n",
-       "0    0.223307            0.245760    0.213459           0.061674   \n",
-       "0    0.211554            0.189716    0.071570           0.029253   \n",
-       "0    0.219920            0.247588    0.207434           0.051606   \n",
-       "0    0.211620            0.203698    0.117337           0.005517   \n",
-       "0    0.227224            0.208508    0.109607           0.009322   \n",
-       "0    0.217397            0.184057    0.061241           0.036457   \n",
+       "0    0.171647            0.158558    0.140617           0.069281   \n",
+       "0    0.167463            0.187707    0.273794           0.188795   \n",
+       "0    0.166335            0.198480    0.267168           0.171820   \n",
+       "0    0.169522            0.183631    0.230045           0.142003   \n",
+       "0    0.180146            0.128164    0.125554           0.073187   \n",
+       "0    0.172112            0.164090    0.183914           0.110755   \n",
+       "0    0.166799            0.171342    0.196176           0.120232   \n",
+       "0    0.166733            0.198420    0.248525           0.152231   \n",
+       "0    0.171182            0.205802    0.297534           0.193000   \n",
+       "0    0.173307            0.176848    0.208091           0.122959   \n",
        "\n",
        "   overall accuracy violation  \n",
-       "0                    0.087110  \n",
-       "0                    0.095318  \n",
-       "0                    0.095779  \n",
-       "0                    0.083361  \n",
-       "0                    0.104254  \n",
-       "0                    0.088321  \n",
-       "0                    0.111614  \n",
-       "0                    0.092045  \n",
-       "0                    0.085599  \n",
-       "0                    0.086420  "
+       "0                    0.123043  \n",
+       "0                    0.118344  \n",
+       "0                    0.120596  \n",
+       "0                    0.125629  \n",
+       "0                    0.131126  \n",
+       "0                    0.121920  \n",
+       "0                    0.119776  \n",
+       "0                    0.119979  \n",
+       "0                    0.127488  \n",
+       "0                    0.126413  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3790,18 +3790,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "id": "4d72df0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"LogReg_baseline.csv\")"
+    "df.to_csv(\"LogReg_baseline_1000.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f2f474dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i: 0\n",
+      "i: 1\n",
+      "i: 2\n",
+      "i: 3\n",
+      "i: 4\n",
+      "i: 5\n",
+      "i: 6\n",
+      "i: 7\n",
+      "i: 8\n",
+      "i: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "fairness_violation = pd.DataFrame()\n",
+    "for i in range(10):\n",
+    "    print(f\"i: {i}\")\n",
+    "    clf = LogReg_Baseline()\n",
+    "    clf.make_set(train, label, group, 500, test, label_test, group_test)\n",
+    "    fairness = clf.train(loss_01)\n",
+    "    fairness_violation = pd.concat([fairness_violation, pd.DataFrame(fairness)], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "45c2c2aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>test error</th>\n",
+       "      <th>demographic parity</th>\n",
+       "      <th>equal odds</th>\n",
+       "      <th>equal_opportunity</th>\n",
+       "      <th>overall accuracy violation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.187317</td>\n",
+       "      <td>0.196641</td>\n",
+       "      <td>0.255307</td>\n",
+       "      <td>0.151412</td>\n",
+       "      <td>0.125758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.179880</td>\n",
+       "      <td>0.221853</td>\n",
+       "      <td>0.297323</td>\n",
+       "      <td>0.175139</td>\n",
+       "      <td>0.129221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.181142</td>\n",
+       "      <td>0.169502</td>\n",
+       "      <td>0.204342</td>\n",
+       "      <td>0.120617</td>\n",
+       "      <td>0.131094</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.173108</td>\n",
+       "      <td>0.187193</td>\n",
+       "      <td>0.306700</td>\n",
+       "      <td>0.220134</td>\n",
+       "      <td>0.123096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.172112</td>\n",
+       "      <td>0.176155</td>\n",
+       "      <td>0.250560</td>\n",
+       "      <td>0.170069</td>\n",
+       "      <td>0.124035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.179681</td>\n",
+       "      <td>0.197172</td>\n",
+       "      <td>0.277628</td>\n",
+       "      <td>0.174637</td>\n",
+       "      <td>0.131644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.178287</td>\n",
+       "      <td>0.208671</td>\n",
+       "      <td>0.270957</td>\n",
+       "      <td>0.158980</td>\n",
+       "      <td>0.129575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.177556</td>\n",
+       "      <td>0.143213</td>\n",
+       "      <td>0.084419</td>\n",
+       "      <td>0.021079</td>\n",
+       "      <td>0.122751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.176693</td>\n",
+       "      <td>0.184235</td>\n",
+       "      <td>0.312669</td>\n",
+       "      <td>0.226928</td>\n",
+       "      <td>0.125095</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.175697</td>\n",
+       "      <td>0.172202</td>\n",
+       "      <td>0.235296</td>\n",
+       "      <td>0.154933</td>\n",
+       "      <td>0.126637</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   test error  demographic parity  equal odds  equal_opportunity  \\\n",
+       "0    0.187317            0.196641    0.255307           0.151412   \n",
+       "0    0.179880            0.221853    0.297323           0.175139   \n",
+       "0    0.181142            0.169502    0.204342           0.120617   \n",
+       "0    0.173108            0.187193    0.306700           0.220134   \n",
+       "0    0.172112            0.176155    0.250560           0.170069   \n",
+       "0    0.179681            0.197172    0.277628           0.174637   \n",
+       "0    0.178287            0.208671    0.270957           0.158980   \n",
+       "0    0.177556            0.143213    0.084419           0.021079   \n",
+       "0    0.176693            0.184235    0.312669           0.226928   \n",
+       "0    0.175697            0.172202    0.235296           0.154933   \n",
+       "\n",
+       "   overall accuracy violation  \n",
+       "0                    0.125758  \n",
+       "0                    0.129221  \n",
+       "0                    0.131094  \n",
+       "0                    0.123096  \n",
+       "0                    0.124035  \n",
+       "0                    0.131644  \n",
+       "0                    0.129575  \n",
+       "0                    0.122751  \n",
+       "0                    0.125095  \n",
+       "0                    0.126637  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(fairness_violation)\n",
+    "df.columns = [\"test error\", \"demographic parity\", \"equal odds\", \"equal_opportunity\", \"overall accuracy violation\"]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "adf6b236",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"LogReg_baseline_500.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2f474dd",
+   "id": "944adefb",
    "metadata": {},
    "outputs": [],
    "source": []
